<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bardemir</string>
    <string name="action_settings">Settings</string>
    <string name="events">Eventos</string>
    <string name="rides">Caronas</string>
    <string name="calendar">Calendário</string>
    <string name="about">Sobre</string>
    <string name="tools">Ferramentas</string>
    <string name="next_events">Próximos Eventos</string>
    <string name="prev_events">Eventos Anteriores</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_door">Abrir Porta</string>
    <string name="call">Chamar</string>
    <string name="call_somebody_at_bar">Chamar Alguém no Bar</string>
    <string name="play_lists">Play Lists</string>
    <string name="comming_soon">Em breve...</string>

    <string name="facebook_app_id">BARDEMIR_APP_ID</string>

</resources>
