<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/left_drawer"
    android:layout_width="240dp"
    android:layout_height="match_parent"
    android:layout_gravity="left"
    android:background="?attr/colorPrimary"
    android:divider="@android:color/transparent"
    android:dividerHeight="0dp"
    android:orientation="vertical">

    <FrameLayout
        style="@style/LeftNavHeader"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/bardemir_background"></FrameLayout>

    <LinearLayout
        android:id="@+id/events"
        style="@style/NavigationItem">

        <ImageView
            style="@style/NavigationItemIcon"
            android:src="@android:drawable/ic_menu_today" />

        <TextView
            style="@style/NavigationItemText"
            android:text="@string/events" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/tools"
        style="@style/NavigationItem">

        <ImageView
            style="@style/NavigationItemIcon"
            android:src="@android:drawable/ic_menu_manage" />

        <TextView
            style="@style/NavigationItemText"
            android:text="@string/tools" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rides"
        style="@style/NavigationItem">

        <ImageView
            style="@style/NavigationItemIcon"
            android:src="@android:drawable/ic_menu_compass" />

        <TextView
            style="@style/NavigationItemText"
            android:text="@string/rides" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/play_lists"
        style="@style/NavigationItem">

        <ImageView
            style="@style/NavigationItemIcon"
            android:src="@android:drawable/ic_media_play" />

        <TextView
            style="@style/NavigationItemText"
            android:text="@string/play_lists" />
    </LinearLayout>

    <View
        style="@style/Separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"></View>

    <LinearLayout
        android:id="@+id/about"
        style="@style/NavigationItem">

        <ImageView
            style="@style/NavigationItemIcon"
            android:src="@android:drawable/ic_menu_info_details" />

        <TextView
            style="@style/NavigationItemText"
            android:text="@string/about" />
    </LinearLayout>


</LinearLayout>