<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="bardemir.bardemir.ToolsFragment">

    <android.support.v7.widget.CardView
        android:id="@+id/tools"
        style="@style/Card">

        <LinearLayout style="@style/CardBody">

            <TextView
                android:id="@+id/title"
                style="@style/CardHeaderText"
                android:text="@string/call" />

            <LinearLayout
                style="@style/CardContent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/open_door"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/open_door" />

                <Button
                    android:id="@+id/call_somebody_at_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/call_somebody_at_bar" />
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>
